unpackaged/main/default/objects/zkfedex__PrintHistory__c/zkfedex__PrintHistory__c.object-meta.xml
<CustomObject>
    <label>FedEx Print History</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>FedEx Print History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Print History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>