unpackaged/main/default/objects/zkfedex__PrintHistory__c/fields/zkfedex__FileName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>