unpackaged/main/default/objects/zkfedex__PrintHistory__c/fields/zkfedex__PrinterId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PrinterId__c</fullName>
    <label>Printer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>