unpackaged/main/default/objects/zkfedex__PrintHistory__c/fields/zkfedex__PrinterName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PrinterName__c</fullName>
    <label>Printer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>