unpackaged/main/default/objects/zkfedex__PrintHistory__c/fields/zkfedex__PrintJobId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PrintJobId__c</fullName>
    <label>Print Job Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>